--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,9 @@
 	<title>My HCI Friends</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	
+	<link href="css/bootstrap.css" rel="stylesheet">
+	<link href="css/bootstrap-theme.css" rel="stylesheet">
+	<link href="css/hci-friends.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -14,10 +16,17 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->        
 </head>
-
+<div class="container">
 <body>
 	<h1>My HCI Friends</h1>
-
+	{{#each friends}}
+	<div id="{{name}}" class"hci-friend">
+		<img src="{{imageURL}}" class="img-responsive img-rounded">
+		<h3> <a href="#" class="friend-name">{{name}}</a> </h3>
+		<p> {{description}} </p>
+		<hr></hr>
+	</div>
+	{{/each}}
 	<form id="addFriendForm" role="form" method="get" action="/add">
 		<h3>Add a friend</h3>
 	    <div class="form-group">
@@ -30,5 +39,10 @@
 	    </div>
 	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
 	</form>
+	<script src="js/jquery-1.11.0.js"></script>
+	<script src="js/bootstrap.js"></script>
+	<script src="js/hci-friends.js"></script>
 </body>
+</div>
+
 </html>
